force-app/main/default/objects/Account/fields/Chorus_Repository__c.field-meta.xml
<CustomField>
    <fullName>Chorus_Repository__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si l&#39;établissement publique est référencé dans le portail CHORUS. Le portail CHORUS permet de mettre à disposition  les factures pour ces établissements</description>
    <label>Dépôt Chorus</label>
    <type>Checkbox</type>
</CustomField>