force-app/main/default/objects/Account/fields/City_of_the_Commercial_Register__c.field-meta.xml
<CustomField>
    <fullName>City_of_the_Commercial_Register__c</fullName>
    <description>Ville du registre du commerce de l&#39;établissement issu de l&#39;INSEE</description>
    <label>Ville du registre du commerce</label>
    <length>150</length>
    <type>Text</type>
</CustomField>