force-app/main/default/objects/Account/fields/Collective_procedure_in_progress__c.field-meta.xml
<CustomField>
    <fullName>Collective_procedure_in_progress__c</fullName>
    <description>Etat de la procédure collective en cours de l&#39;établissement issu de l&#39;INSEE</description>
    <label>Procédure collective en cours</label>
    <length>150</length>
    <type>Text</type>
</CustomField>