force-app/main/default/objects/Account/fields/Date_of_assignment_EP__c.field-meta.xml
<CustomField>
    <fullName>Date_of_assignment_EP__c</fullName>
    <description>Date d&#39;attribution à l&#39;Education Populaire</description>
    <label>Date d&#39;attribution EP</label>
    <type>Date</type>
</CustomField>