force-app/main/default/objects/Account/fields/Date_of_assignment_IG__c.field-meta.xml
<CustomField>
    <fullName>Date_of_assignment_IG__c</fullName>
    <description>Date d&#39;attribution à l&#39;Intérêt général</description>
    <label>Date d&#39;attribution IG</label>
    <type>Date</type>
</CustomField>