force-app/main/default/objects/Account/fields/Date_of_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_creation__c</fullName>
    <description>Date de création de l&#39;établissement issu de l&#39;INSEE</description>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>