force-app/main/default/objects/Account/fields/Dont_contact_by_phone__c.field-meta.xml
<CustomField>
    <fullName>Dont_contact_by_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Attention , si vous modifiez ce champ, le champ correspondant sur l&#39;ensemble des contacts de ce compte sera mis à jour également</inlineHelpText>
    <label>Ne pas contacter par téléphone</label>
    <type>Checkbox</type>
</CustomField>