force-app/main/default/objects/Account/fields/End_of_the_financial_year__c.field-meta.xml
<CustomField>
    <fullName>End_of_the_financial_year__c</fullName>
    <description>Fin d&#39;exercice social de l&#39;établissement (mois)</description>
    <label>Fin d&#39;exercice social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Janvier</fullName>
                <default>true</default>
                <label>Janvier</label>
            </value>
            <value>
                <fullName>Février</fullName>
            </value>
            <value>
                <fullName>Mars</fullName>
            </value>
            <value>
                <fullName>Avril</fullName>
            </value>
            <value>
                <fullName>Mai</fullName>
            </value>
            <value>
                <fullName>Juin</fullName>
            </value>
            <value>
                <fullName>Juillet</fullName>
            </value>
            <value>
                <fullName>Août</fullName>
            </value>
            <value>
                <fullName>Septembre</fullName>
            </value>
            <value>
                <fullName>Novembre</fullName>
            </value>
            <value>
                <fullName>Décembre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>