force-app/main/default/objects/Account/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Fonction de la personne</description>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comptable</fullName>
            </value>
            <value>
                <fullName>Président</fullName>
            </value>
            <value>
                <fullName>Présidente</fullName>
            </value>
            <value>
                <fullName>Trésorier</fullName>
            </value>
            <value>
                <fullName>Trésorière</fullName>
            </value>
            <value>
                <fullName>Vice-président</fullName>
            </value>
            <value>
                <fullName>Vice-présidente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>