force-app/main/default/objects/Account/fields/Intra_Community_VAT_number__c.field-meta.xml
<CustomField>
    <fullName>Intra_Community_VAT_number__c</fullName>
    <description>Numéro de TVA intracommunautaire de l&#39;établissement</description>
    <label>N° TVA intracommunautaire</label>
    <length>30</length>
    <type>Text</type>
</CustomField>