force-app/main/default/objects/Account/fields/InvoicingBlocking__c.field-meta.xml
<CustomField>
    <fullName>InvoicingBlocking__c</fullName>
    <label>Blocage de la facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debloque</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>Bloque</fullName>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>