force-app/main/default/objects/Account/fields/Legal_form__c.field-meta.xml
<CustomField>
    <fullName>Legal_form__c</fullName>
    <label>Forme juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_form</valueSetName>
    </valueSet>
</CustomField>