force-app/main/default/objects/Account/fields/NAF_Code__c.field-meta.xml
<CustomField>
    <fullName>NAF_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Code NAF de l&#39;établissement</description>
    <label>Code NAF</label>
    <referenceTo>Code_NAF__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>