force-app/main/default/objects/Account/fields/Name_of_the_leader__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_leader__c</fullName>
    <description>Nom du dirigeant de l&#39;établissement issu de l&#39;INSEE</description>
    <label>Nom du dirigeant</label>
    <length>150</length>
    <type>Text</type>
</CustomField>