force-app/main/default/objects/Account/fields/Nature_du_compte__c.field-meta.xml
<CustomField>
    <fullName>Nature_du_compte__c</fullName>
    <formula>IF(IsPersonAccount = false, IMAGE(&quot;/resource/1561635223000/PM?&quot;, &quot;Indicateur de nature&quot; , 35, 35), IMAGE(&quot;/resource/1561635238000/PP?&quot;, &quot;Indicateur de nature&quot; , 35, 35))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nature du compte</label>
    <type>Text</type>
</CustomField>