force-app/main/default/objects/Account/fields/Number_of_employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employees__c</fullName>
    <description>Nombre d&#39;employés de l&#39;établissement issu de l&#39;INSEE</description>
    <label>Nombre d&#39;employés</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>