force-app/main/default/objects/Account/fields/Number_of_institutions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_institutions__c</fullName>
    <description>Nombre d&#39;établissements lié à l&#39;établissement principal issu de l&#39;INSEE</description>
    <label>Nombre d&#39;établissements</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>