force-app/main/default/objects/Account/fields/Organizer_of_commercial_sessions__c.field-meta.xml
<CustomField>
    <fullName>Organizer_of_commercial_sessions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicateur positionné si l&#39;établissement organise des séances commerciales</description>
    <label>Organisateur de séances commerciales</label>
    <type>Checkbox</type>
</CustomField>