force-app/main/default/objects/Account/fields/Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Party_ID__c</fullName>
    <externalId>true</externalId>
    <label>Party_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>