force-app/main/default/objects/Account/fields/QUALIF_SMART__c.field-meta.xml
<CustomField>
    <fullName>QUALIF_SMART__c</fullName>
    <label>Qualification SMART</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>CHR</fullName>
            </value>
            <value>
                <fullName>Centre de sport</fullName>
            </value>
            <value>
                <fullName>Magasin</fullName>
            </value>
            <value>
                <fullName>Salon de coiffure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>