force-app/main/default/objects/Account/fields/SIRET_RNA__c.field-meta.xml
<CustomField>
    <fullName>SIRET_RNA__c</fullName>
    <description>Numéro de SIRET ou n° du  Répertoire National des Associations</description>
    <label>SIRET / RNA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>