force-app/main/default/objects/Account/fields/Specific_distribution__c.field-meta.xml
<CustomField>
    <fullName>Specific_distribution__c</fullName>
    <description>Information pour les établissements faisant l&#39;objet d&#39;une répartition spécifique</description>
    <label>Répartition spécifique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>