force-app/main/default/objects/Account/fields/TECH_ERPBlocking__c.field-meta.xml
<CustomField>
    <fullName>TECH_ERPBlocking__c</fullName>
    <formula>IF( ISPICKVAL(Status__c, &quot;Désactivé&quot;), &quot;All&quot;,
IF( ISPICKVAL(InvoicingBlocking__c, &quot;Bloque&quot;), &quot;Invoice&quot;, &quot;No&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_ERPBlocking</label>
    <type>Text</type>
</CustomField>