force-app/main/default/objects/Account/fields/TECH_LocationId_Billing__c.field-meta.xml
<CustomField>
    <fullName>TECH_LocationId_Billing__c</fullName>
    <externalId>true</externalId>
    <label>TECH_LocationId_Billing</label>
    <length>15</length>
    <type>Text</type>
</CustomField>