force-app/main/default/objects/Account/fields/TECH_PartyTypeErp__c.field-meta.xml
<CustomField>
    <fullName>TECH_PartyTypeErp__c</fullName>
    <formula>IF( IsPersonAccount = false, &quot;Organization&quot;, &quot;Person&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_PartyTypeErp</label>
    <type>Text</type>
</CustomField>