force-app/main/default/objects/Account/fields/Trade_register_number__c.field-meta.xml
<CustomField>
    <fullName>Trade_register_number__c</fullName>
    <description>Numéro d&#39;identification au registre du commerce de l&#39;établissement issu de l&#39;INSEE</description>
    <label>Numéro au registre du commerce</label>
    <length>150</length>
    <type>Text</type>
</CustomField>