force-app/main/default/objects/Account/fields/Type_indicateur__c.field-meta.xml
<CustomField>
    <fullName>Type_indicateur__c</fullName>
    <formula>IMAGE( 
CASE( Type , 
&quot;Prospect&quot;, &quot;/resource/1563194464000/Prospect&quot;, 
&quot;Client&quot;, &quot;/resource/1563194448000/Client?&quot;, 
&quot;/s.gif&quot;), 
&quot;Indicateur de type&quot;,35,35)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Jaune : Client /
Violet : Prospect</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>