force-app/main/default/objects/Account/recordTypes/Personne_morale.recordType-meta.xml
<RecordType>
    <fullName>Personne_morale</fullName>
    <active>true</active>
    <label>Personne Morale</label>
</RecordType>