force-app/main/default/objects/Account/validationRules/VR_adresse_de_facturation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_adresse_de_facturation</fullName>
    <active>true</active>
    <description>L&#39;adresse de facturation doit être renseignée</description>
    <errorConditionFormula>ISBLANK(  BillingAddress  ) &amp;&amp;  $User.BypassVR__c = false</errorConditionFormula>
    <errorMessage>Merci de saisir l&#39;adresse de facturation du compte</errorMessage>
</ValidationRule>