force-app/main/default/objects/Account/validationRules/VR_email_telephone_PP.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_email_telephone_PP</fullName>
    <active>false</active>
    <description>L&#39;adresse email et le téléphone fixe doivent être renseignés</description>
    <errorConditionFormula>(ISBLANK(   PersonEmail ) || ISBLANK(   Phone )) &amp;&amp;  $User.BypassVR__c = false &amp;&amp;  RecordType.Id = &quot;0121w0000005w8w&quot;</errorConditionFormula>
    <errorMessage>Merci de saisir l&#39;adresse email et le téléphone de la personne.</errorMessage>
</ValidationRule>