force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Type_indicateur__c</columns>
    <columns>Statut_indicateur__c</columns>
    <columns>Nature_du_compte__c</columns>
    <columns>NAF_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les comptes</label>
</ListView>