force-app/main/default/objects/Account/listViews/Tous_les_comptes_actifs.listView-meta.xml
<ListView>
    <fullName>Tous_les_comptes_actifs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Type_indicateur__c</columns>
    <columns>Nature_du_compte__c</columns>
    <columns>NAF_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Actif</value>
    </filters>
    <label>Tous les comptes actifs</label>
</ListView>