force-app/main/default/objects/Account/listViews/Tous_les_prospects.listView-meta.xml
<ListView>
    <fullName>Tous_les_prospects</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Statut_indicateur__c</columns>
    <columns>Nature_du_compte__c</columns>
    <columns>NAF_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Prospect</value>
    </filters>
    <label>Tous les prospects</label>
</ListView>