force-app/main/default/objects/Account/listViews/Toutes_les_personnes_morales.listView-meta.xml
<ListView>
    <fullName>Toutes_les_personnes_morales</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Type_indicateur__c</columns>
    <columns>Statut_indicateur__c</columns>
    <columns>NAF_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Personne_morale</value>
    </filters>
    <label>Toutes les personnes morales</label>
</ListView>