force-app/main/default/objects/Account/listViews/Toutes_les_personnes_physiques.listView-meta.xml
<ListView>
    <fullName>Toutes_les_personnes_physiques</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Type_indicateur__c</columns>
    <columns>Statut_indicateur__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Personne_physique</value>
    </filters>
    <label>Toutes les personnes physiques</label>
</ListView>